--- a/PostBoard/Client/_Imports.razor
+++ b/PostBoard/Client/_Imports.razor
@@ -9,3 +9,5 @@
 @using Microsoft.JSInterop
 @using PostBoard.Client
 @using PostBoard.Client.Shared
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
