--- a/PostBoard/Client/Pages/Post/Index.razor
+++ b/PostBoard/Client/Pages/Post/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/post/index"
-@using PostBoard.Client.Shared.Post
+@using PostBoard.Shared.Post
 @inject HttpClient Http
 @attribute [Authorize]
 
