updates to file structure

--- a/PostBoard/Client/Pages/Post/Index.razor
+++ b/PostBoard/Client/Pages/Post/Index.razor
@@ -5,7 +5,7 @@
 
 <h3>Posts</h3>
 
-<a href="/category/create">Create a Post</a>
+<a href="/post/create">Create a Post</a>
 
 @if (posts == null)
 {
