--- a/PostBoard/Client/Shared/NavMenu.razor
+++ b/PostBoard/Client/Shared/NavMenu.razor
@@ -10,7 +10,7 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="post" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="post/index" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Posts
             </NavLink>
         </div>
