A whole lot of updates, forgot to commit and push for like two weeks

--- a/PostBoard/Client/_Imports.razor
+++ b/PostBoard/Client/_Imports.razor
@@ -9,3 +9,6 @@
 @using Microsoft.JSInterop
 @using PostBoard.Client
 @using PostBoard.Client.Shared
+@using PostBoard.Shared.Models.Comment;
+@using PostBoard.Shared.Models.Post;
+@using PostBoard.Shared.Models.Category;
